<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.projet_tut.RegisterFragment">

    <EditText
        android:id="@+id/register_ineArpege_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ine_arpege"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <EditText
        android:id="@+id/register_birthDate_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/birth_date"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/register_ineArpege_editText"
        app:layout_constraintTop_toBottomOf="@+id/register_ineArpege_editText"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/register_validate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_birthDate_editText"
        app:layout_constraintStart_toStartOf="@+id/register_birthDate_editText"
        app:layout_constraintTop_toBottomOf="@+id/register_birthDate_editText"
        app:layout_constraintVertical_bias="0.120000005" />

</androidx.constraintlayout.widget.ConstraintLayout>